acces des image et separation de la db